1 加入帧动画和补间动画<rotate><alpha>例子;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".FrameActivity" />
-        <activity android:name=".PropertyActivity"></activity>
+        <activity android:name=".TweenActivity" />
+        <activity android:name=".PropertyActivity"/>
     </application>
 
 </manifest>
